RESOLVED FIXED15490
Iteration statements sometimes incorrectly evaluate to the empty value (KDE r670547)
https://bugs.webkit.org/show_bug.cgi?id=15490
Summary Iteration statements sometimes incorrectly evaluate to the empty value (KDE r...
Geoffrey Garen
Reported 2007-10-13 10:27:02 PDT
Broken off from bug 14868.
Attachments
Patch (7.97 KB, patch)
2007-10-13 10:33 PDT, Geoffrey Garen
mjs: review+
Geoffrey Garen
Comment 1 2007-10-13 10:33:13 PDT
Maciej Stachowiak
Comment 2 2007-10-13 18:23:17 PDT
Comment on attachment 16653 [details] Patch r=me
Geoffrey Garen
Comment 3 2007-10-15 13:47:01 PDT
Committed revision 26617.
Note You need to log in before you can comment on or make changes to this bug.