JavaScriptCore/kjs/completion.h
@@ -52,6 +52,7 @@ namespace KJS {
 
     ComplType complType() const { return comp; }
     JSValue *value() const { return val; }
+    void setValue(JSValue* v) { val = v; }
     Identifier target() const { return tar; }
     bool isValueCompletion() const { return !!val; }
   private:
